--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "concurrently": "^6.2.1",
     "currently": "0.0.8",
     "rxjs": "~6.6.0",
